@@ -1,3 +1,11 @@
+ifeq ($(PLATFORM_VERSION_SUPPORTED), yes)
+  ifdef PLATFORM_COMPONENT_NAME
+     DEFINES += -DPLATFORM_COMPONENT_NAME=\"$(PLATFORM_COMPONENT_NAME)\"
+  else
+     DEFINES += -DPLATFORM_COMPONENT_NAME=\"$(LIBRARY)\"
+  endif
+endif
+
 INCLUDES = -I$(ROOT)/src $(EXTRA_INCLUDES)
 
 include $(ROOT)/mak/common.mak
