@@ -1,3 +1,11 @@
+ifeq ($(PLATFORM_VERSION_SUPPORTED), yes)
+  ifdef PLATFORM_COMPONENT_NAME
+     DEFINES += -DPLATFORM_COMPONENT_NAME=\"$(PLATFORM_COMPONENT_NAME)\"
+  else
+     DEFINES += -DPLATFORM_COMPONENT_NAME=\"$(PROGRAM)\"
+  endif
+endif
+
 include $(ROOT)/mak/common.mak
 
 ifeq ($(OS_TYPE),windows)
