@@ -34,6 +34,8 @@
 
 #define PEGASUS_COMPILER_ACC
 
+#define PLATFORM_VERSION_SUPPORTED
+
 #define PEGASUS_UINT64 unsigned long long
 
 #define PEGASUS_SINT64 long long
